# ai-project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  copier.yaml  ruff.toml
~/workspace/my-project/: .copier-answers.yml  .env.example  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Makefile  README.md  SANYI.md  project_init.sh  pyproject.toml
~/workspace/my-project/.claude/docs/companion/: collaboration.md
~/workspace/my-project/.claude/skills/: README.md
~/workspace/my-project/.claude/skills/code-review/: SKILL.md
~/workspace/my-project/.claude/skills/doc-to-linear-tickets/: SKILL.md
~/workspace/my-project/.claude/skills/execute-plan/: SKILL.md
~/workspace/my-project/.claude/skills/execute-tasks/: SKILL.md
~/workspace/my-project/.claude/skills/mcp-builder/: SKILL.md
~/workspace/my-project/.claude/skills/review-pr/: SKILL.md
~/workspace/my-project/.claude/skills/scope-initiative/: SKILL.md
~/workspace/my-project/.claude/skills/skill-creator/: SKILL.md
~/workspace/my-project/.github/: pull_request_template.md
~/workspace/my-project/.github/workflows/: ci.yml
~/workspace/my-project/configs/: README.md  dev.yaml  prod.yaml
~/workspace/my-project/core/: __main__.py  preprocessing.py
~/workspace/my-project/data/corpus/: cleaning.md  golden_qa.jsonl
~/workspace/my-project/evals/: README.md
~/workspace/my-project/evals/graders/: citation.py
~/workspace/my-project/evals/pipelines/: run.py
~/workspace/my-project/infrastructure/containers/: README.md  docker-compose.yml
~/workspace/my-project/infrastructure/containers/lg_agent/: Dockerfile
~/workspace/my-project/infrastructure/terraform/: README.md  main.tf  variables.tf
~/workspace/my-project/mcp_servers/my-project/: package.json
~/workspace/my-project/mcp_servers/my-project/src/: index.ts
~/workspace/my-project/nbks/: corpus_analysis.py
~/workspace/my-project/src/agents/rag_agent/: build_index.py  main.py  (+5 more)
~/workspace/my-project/tests/: conftest.py
~/workspace/my-project/tests/integration/: README.md
~/workspace/my-project/tests/smoke/: README.md
(+460 files in other folders)
