[project]
name = "my-project"
version = "0.1.0"
description = "TODO: describe this project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
    "langchain-anthropic>=0.3.0",
    "duckdb>=1.1.0",
    "sentence-transformers>=3.0.0",
    "wandb>=0.18.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]
notebooks = [
    "marimo>=0.13.3",
]

# This is an app, not a library — skip building/installing it as a package.
# "agents" (from src/agents), "core", and "evals" are made
# importable via pythonpath below (pytest) and PYTHONPATH in the Makefile (everything
# else) — mirrors playground's actual PYTHONPATH convention rather than fighting
# hatchling's editable-install semantics for multiple disjoint package roots.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
addopts = "-v --ignore=tests/integration"
markers = ["integration: real external calls, opt-in only"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# RUF001-003: typographic unicode in prose; N803/N806: ML naming (X, y, X_train)
ignore = ["E501", "RUF001", "RUF002", "RUF003", "N803", "N806"]

# middleware/ only exists in split_service renders — pin it first-party so the
# agents' try/except import blocks sort identically whether or not it's present
# (ruff otherwise classifies it by directory existence, flipping I001 per config).
[tool.ruff.lint.isort]
known-first-party = ["middleware"]

[tool.pyright]
include = ["src", "core", "evals", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
